user trips saved to database